# aws-lambda-youtubetranscriptapi

./: .gitignore  README.md
aws_lambda_youtubetranscriptapi/: .gitignore  export_moudle.sh  lambda_function.py  pyproject.toml  requirements.txt
aws_lambda_youtubetranscriptapi/src/: main.py
aws_lambda_youtubetranscriptapi/src/service/: subtitles.txt  suffix_info_service.py  transcript_service.py
